# autoware_auto_msgs

./: README.md  custom_config.yaml  ros2_custom_pkgs.repos  sub_preicted_objects.cpp
autoware_auto_geometry_msgs/: CMakeLists.txt
autoware_auto_geometry_msgs/msg/: Complex32.msg  Quaternion32.msg  RelativePositionWithCovarianceStamped.msg
autoware_auto_mapping_msgs/: CMakeLists.txt
autoware_auto_mapping_msgs/msg/: HADMapBin.msg  HADMapSegment.msg
autoware_auto_mapping_msgs/srv/: HADMapService.srv
autoware_auto_perception_msgs/: CMakeLists.txt
autoware_auto_perception_msgs/msg/: BoundingBox.msg  BoundingBoxArray.msg  ClassifiedRoi.msg  ClassifiedRoiArray.msg  DetectedObject.msg  DetectedObjectKinematics.msg  DetectedObjects.msg  LookingTrafficSignal.msg  ObjectClassification.msg  PointClusters.msg  PointXYZIF.msg  PredictedObject.msg  PredictedObjectKinematics.msg  PredictedObjectUE.idl  PredictedObjectUE.msg  PredictedObjects.msg  Shape.msg  TrackedObject.msg  TrackedObjectKinematics.msg  TrackedObjects.msg  TrafficLight.msg  TrafficLightRoiArray.msg  TrafficSignal.msg  TrafficSignalArray.msg  TrafficSignalStamped.msg  TrafficSignalWithJudge.msg
autoware_auto_planning_msgs/: CMakeLists.txt
autoware_auto_planning_msgs/action/: PlanTrajectory.action  PlannerCostmap.action  RecordTrajectory.action  ReplayTrajectory.action
autoware_auto_planning_msgs/msg/: HADMapRoute.msg  Path.msg  PathPointWithLaneId.msg  PathWithLaneId.msg  Route.msg  Trajectory.msg  TrajectoryPoint.msg
autoware_auto_planning_msgs/srv/: ModifyTrajectory.srv
